k8s/03-deployment-configmap-withvolume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-deployment
  labels: 
    app: goserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goserver #
  template:
    metadata:
      name: goserver
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: fabiolnh/hello-go:v5
          volumeMounts:
            - mountPath: "/go/myfamily"
              name: config
      volumes:
        - name: config
          configMap:
            name: configmap-members
            items:
              - key: members
                path: family.txt
