k8s/03-deployment-configmap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver-deployment
  labels: 
    app: goserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goserver #
  template:
    metadata:
      name: goserver
      labels:
        app: goserver
    spec:
      containers:
        - name: goserver
          image: fabiolnh/hello-go:v4
          ports:
            - containerPort: 80
