k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "ingress.fabiolnh.com" # The host has to be configured in the DNS type "A" with the External IP
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver-service
            port: 
              number: 80
